Fix: resolve main info overflow text with container query for flexible font size

--- a/style.css
+++ b/style.css
@@ -31,15 +31,16 @@ h1 {
 }
 
 .fs-01 {
-    font-size: 6em;
+    font-size: 28cqw;
     font-weight: bold;
-    overflow-x: auto;
 }
 
 .main-box {
     box-shadow: 0 0 0.5em white inset;
     background-color: rgba(255, 255, 255, 0.2);
     height: 100%;
+    container-name: card-main;
+    container-type: inline-size;
 }
 
 .detail-box {
